test/conformance/chainsaw/generating-policies/nosync/nosync-delete-downstream/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: nosync-delete-downstream
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that the configmap is generated
    try:
    - assert:
        file: configmap-assert.yaml
  - name: sleep
    try:
    - sleep:
        duration: 3s
  - name: delete the downstream
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: zk-kafka-address
          namespace: test-ns
  - name: check that the downstream isn't generated
    try:
    - error:
        file: configmap-error.yaml
